@@ -1,7 +1,7 @@
 #!/bin/bash
 # script to deploy YATC on Ubuntu 12.04 - 14.04 (netinstall with only ssh server installed)
 # (*w) author: nixargh <nixargh@gmail.com>
-VERSION="0.9.7"
+VERSION="0.9.8"
 ##### Settings ################################################################
 # !!! must be executed from root !!!
 RDPUSER="user"
@@ -9,9 +9,9 @@ TIMEZONE="Europe/Moscow"
 FREERDP_REPO="https://github.com/FreeRDP/FreeRDP.git"
 FREERDP_BRANCH="c9bc88d5f0fed0de03ee697dd382ba8f8a434a82"
 YATC_REPO="https://github.com/nixargh/yatc.git"
-YATC_BRANCH="dev"
+YATC_BRANCH="master"
 TWOXCLIENT="http://www.2x.com/downloads/rdp-clients/2xclient.deb"
-TWOXCLIENT_VER="12.0.2270"
+TWOXCLIENT_VER="14.0.3213"
 TWOXCLIENT_CHANGELOG="http://www.2x.com/downloads/rdp-clients/Linux-ChangeLog.txt"
 ###############################################################################
 set -u -e
@@ -171,7 +171,7 @@ twoxclient() {
 
   dpkg --add-architecture i386
 
-  apt-get install -y pcscd:i386 libccid:i386 libpcsclite1:i386 libxpm4:i386 libxml2:i386 libstdc++6:i386
+  apt-get install -y pcscd:i386 libccid:i386 libpcsclite1:i386 libxpm4:i386 libxml2:i386 libstdc++6:i386 cryptsetup-bin libcryptsetup4 liblvm2app2.2 udisks
 
   cd /tmp
   wget $TWOXCLIENT -O ./2xclient.deb
