@@ -1,3 +1,11 @@
+YATC 0.9.8:
+  yatc.py:
+    1. Merge dev to master.
+
+  post-install.sh:
+    1. Merge dev to master.
+    2. Updating 2xclient actual version to 14.0.3213.
+
 YATC 0.9.7:
   yatc.py:
     1. Switched from ugly error windows to pretty informational frame. It's placed right above login frame.
